--- a/assets/css/base/_general.scss
+++ b/assets/css/base/_general.scss
@@ -6,6 +6,7 @@ html{
 
 body {
   background-color: $background-primary;
+  // background-color: hsl(240, 4%, 5%);
 	min-width: 320px;
 	height: 100%;
   overflow-x: hidden;
