--- a/assets/css/utilities/_variables.scss
+++ b/assets/css/utilities/_variables.scss
@@ -1,7 +1,8 @@
 //COLORS
 // $primary:             #6C5CFF;
+$primary:             #000142;
 // $primary:             #f9a825;
-$primary:             #2962ff;
+// $primary:             #2962ff;
 $primary-light:       lighten($primary,20%);
 $primary-lighter:     lighten($primary,30%);
 $secondary:           #030303;
