--- a/assets/css/utilities/_variables.scss
+++ b/assets/css/utilities/_variables.scss
@@ -1,6 +1,8 @@
 //COLORS
-// $primary:             #000142;
-$primary:             #6e1217;
+// $primary:             #000142
+// $primary:             #6e1217;
+$primary:             #0a182e;
+
 // $primary:             #581845;
 $primary-light:       lighten($primary, 20%);;
 $primary-lighter:     lighten($primary, 30%);
