--- a/static/fonts/fonts.css
+++ b/static/fonts/fonts.css
@@ -26,19 +26,19 @@
 	font-family: 'Rajdhani';
 	font-style: normal;
 	font-weight: 400;
-	src: local('Rajdhani'), url('/fonts/Rajdhani-Regular.ttf') format('truetype');
+	src: url("/fonts/Rajdhani-Regular.ttf") format("truetype");
 }
 
 @font-face {
 	font-family: 'Satisfy';
 	font-style: normal;
 	font-weight: 400;
-	src: local('Satisfy'), url('/fonts/Satisfy-Regular.ttf') format('truetype');
+	src: url("/fonts/Satisfy-Regular.ttf") format("truetype");;
 }
 
 @font-face {
 	font-family: 'Special Elite';
 	font-style: normal;
 	font-weight: 400;
-	src: local('Special Elite'), local('SpecialElite'), url('/fonts/SpecialElite-Regular.ttf') format('truetype');
+	src: local("SpecialElite"), url("/fonts/SpecialElite-Regular.ttf") format("truetype");
 }
