Cambios en diseño para blog y posts

--- a/assets/css/base/_fonts.scss
+++ b/assets/css/base/_fonts.scss
@@ -1,6 +1,7 @@
 // Fonts Definition
 $fontRajdhani: 'Rajdhani';
 $fontGraphik: 'Graphik';
+$fontNunito: 'Nunito';
 
 $font-base-color:             $grey-2;
 $font-family-base:            $fontGraphik, Arial, sans-serif;
