--- a/assets/css/utilities/_variables.scss
+++ b/assets/css/utilities/_variables.scss
@@ -11,6 +11,7 @@ $secondary:           #030303;
 $grey-1:     #161618;
 $grey-2:   #767676;
 $grey-3:   #b5b5b5;
+$grey-4:   #4a4a4a;
 $secondary-super-lighter:   #e4e4e4;
 $background-primary:  #FFFFFF;
 $background-primary-darker:  #F6F7FB;
@@ -42,6 +43,19 @@ $nav-responsive-width:      26rem;
 $border-radius: 					  3px;
 $shadow:									  0 2px 4px rgba(black, .08);
 $background-lighter: #fafafa;
+
+// Vscode One dark pro colors
+$codeColor1: #2bbac5;
+$codeColor2: #d55fde;
+$codeColor3: #f44747;
+$codeColor4: #ef596f;
+$codeColor5: #d19a66;
+$codeColor6: #e5c07b;
+$codeColor7: #7f848e;
+$codeColor8: #5c6370;
+$codeColor9: #61afef;
+$codeColor10: #89ca78;
+$codeColor11: #2bbac5;
 
 
 // -webkit- para Chrome y Safari
