--- a/static/fonts/fonts.css
+++ b/static/fonts/fonts.css
@@ -28,3 +28,10 @@
 	font-weight: 400;
 	src: url("/fonts/Rajdhani-Regular.ttf") format("truetype");
 }
+
+@font-face {
+	font-family: 'Nunito';
+	font-style: normal;
+	font-weight: 400;
+	src: url("/fonts/Nunito-Regular.ttf") format("truetype");
+}
