reemplazando imagenes png

--- a/assets/css/base/_sprite-mixin.scss
+++ b/assets/css/base/_sprite-mixin.scss
@@ -26,7 +26,7 @@ $emojis-white-bg: (
 );
 
 $emoji-white-bg-sprite:(
-  url:'../../assets/images/emojis-white-bg.png', 
+  url:'../../assets/images/emojis-white-bg.jpg', 
   names: $emojis-white-bg,
   columns: 8,
   rows: 1
