--- a/assets/css/utilities/_variables.scss
+++ b/assets/css/utilities/_variables.scss
@@ -11,9 +11,10 @@ $primary-lighter1:    lighten($primary, 40%);
 $primary-darken:      darken($primary, 15%);
 $secondary:           #030303;
 $grey-1:     #161618;
-$grey-2:   #767676;
-$grey-3:   #b5b5b5;
-$grey-4:   #4a4a4a;
+$grey-2:     #767676;
+$grey-3:     #b5b5b5;
+$grey-4:     #4a4a4a;
+$grey:       #cacaca;
 $secondary-super-lighter:   #e4e4e4;
 $background-primary:  #FFFFFF;
 $background-primary-darker:  #F6F7FB;
