--- a/static/fonts/fonts.css
+++ b/static/fonts/fonts.css
@@ -1,4 +1,4 @@
-@font-face {
+/* @font-face {
 	font-family: "Graphik";
 	font-style: normal;
   font-display: swap;
@@ -20,8 +20,7 @@
   font-display: swap;
 	font-weight: 400;
   src: url("/fonts/Tiempos-Headline-Semibold.woff2") format("woff2");
-}
-
+} */
 @font-face {
 	font-family: 'Rajdhani';
 	font-style: normal;
