re-design pages and content

--- a/assets/css/utilities/_variables.scss
+++ b/assets/css/utilities/_variables.scss
@@ -15,6 +15,7 @@ $grey-2:     #767676;
 $grey-3:     #b5b5b5;
 $grey-4:     #4a4a4a;
 $grey:       #cacaca;
+$grey-light: lighten($grey, 15%);;
 $secondary-super-lighter:   #e4e4e4;
 $background-primary:  #FFFFFF;
 $background-primary-darker:  #F6F7FB;
