--- a/static/fonts/fonts.css
+++ b/static/fonts/fonts.css
@@ -25,12 +25,12 @@
 	font-family: 'Rajdhani';
 	font-style: normal;
 	font-weight: 400;
-	src: url("/fonts/Rajdhani-Regular.ttf") format("truetype");
+	src: local('Rajdhani'), url("/fonts/Rajdhani-Regular.ttf") format("truetype");
 }
 
 @font-face {
 	font-family: 'Nunito';
 	font-style: normal;
 	font-weight: 400;
-	src: url("/fonts/Nunito-Regular.ttf") format("truetype");
+	src: local('Nunito'), url("/fonts/Nunito-Regular.ttf") format("truetype");
 }
